--- a/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
@@ -302,15 +302,18 @@
             <GridView
                 android:id="@+id/photos_listview"
                 android:layout_width="wrap_content"
-                android:layout_height="278dp"
+                android:layout_height="376dp"
+                android:layout_below="@id/tabs"
+                android:layout_alignParentBottom="true"
                 android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
                 android:clipToPadding="false"
                 android:horizontalSpacing="8dp"
-                android:minHeight="220dp"
                 android:numColumns="3"
                 android:paddingBottom="8dp"
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="8dp" />
+
 
         </LinearLayout>
     </ScrollView>
