--- a/code/MoodSync/app/src/main/res/layout/user_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/user_profile_fragment.xml
@@ -211,6 +211,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/literally_mood"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -220,10 +221,13 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
+            <!-- Private Account Message -->
+
             <GridView
                 android:id="@+id/photos_listview"
-                android:layout_width="400dp"
-                android:layout_height="305dp"
+                android:layout_width="wrap_content"
+                android:layout_height="386dp"
+                android:layout_below="@id/literally_mood"
                 android:layout_marginHorizontal="16dp"
                 android:clipToPadding="false"
                 android:horizontalSpacing="2dp"
@@ -233,7 +237,6 @@
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="5dp" />
 
-            <!-- Private Account Message -->
             <LinearLayout
                 android:id="@+id/private_account_message"
                 android:layout_width="match_parent"
