--- a/code/MoodSync/app/src/main/res/layout/mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/mood_card_item.xml
@@ -20,6 +20,7 @@
         tools:layout_editor_absoluteX="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/moodhistoryitem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp">
