--- a/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
@@ -135,15 +135,7 @@
 
         <!-- Aligns to the right -->
 
-        <ImageButton
-            android:id="@+id/playButton"
-            android:layout_width="28dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="Play music"
-            android:src="@drawable/sound_up"
-            app:tint="#625C5C" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -192,15 +184,25 @@
 
                 <TextView
                     android:id="@+id/song_title"
-                    android:layout_width="0dp"
+                    android:layout_width="252dp"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="2.5dp"
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:text="Song Title"
                     android:textColor="#555555"
-                    android:textSize="12sp" />
+                    android:textSize="16sp" />
 
+                <ImageButton
+                    android:id="@+id/playButton"
+                    android:layout_width="28dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="Play music"
+                    android:src="@drawable/sound_up"
+                    app:tint="#625C5C" />
 
 
 
