--- a/code/MoodSync/app/src/main/res/values/styles.xml
+++ b/code/MoodSync/app/src/main/res/values/styles.xml
@@ -114,6 +114,14 @@
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:backgroundDimEnabled">true</item>
     </style>
+    <!-- In styles.xml -->
+    <style name="SpinnerTheme" parent="android:Widget.DeviceDefault.Spinner">
+        <item name="android:background">@drawable/spinner_bg</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:paddingRight">15dp</item>
+    </style>
 
 
 </resources>
