--- a/code/MoodSync/app/src/main/res/drawable/edit_text_background.xml
+++ b/code/MoodSync/app/src/main/res/drawable/edit_text_background.xml
@@ -12,5 +12,5 @@
     <stroke
         android:width="1dp"
         android:color="#F2E5D0" />
-    <solid android:color="#FFFDD0"/>
+    <solid android:color="#F6F6E2"/>
 </shape>
