--- a/code/MoodSync/app/src/main/res/layout/add_mood_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/add_mood_fragment.xml
@@ -18,22 +18,18 @@
 
         <TextView
             android:id="@+id/stepIndicator"
-            android:layout_width="49dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/pick_mood"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="326dp"
-            android:layout_marginTop="27dp"
-            android:layout_marginEnd="64dp"
-            android:layout_marginBottom="6dp"
-            android:layout_toEndOf="@+id/cancel"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="18dp"
             android:background="@drawable/step_indicator_background"
-            android:paddingHorizontal="12dp"
-            android:paddingVertical="8dp"
-            android:text="1/2"
+            android:elevation="4dp"
+            android:padding="12dp"
+            android:text="2/2"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <Button
@@ -299,7 +295,7 @@
             android:text="@string/next"
             android:textAllCaps="false"
             android:textColor="#090606"
-            app:backgroundTint="#F4F2C9"
+            app:backgroundTint="#F6F6E2"
             app:cornerRadius="15dp"
             app:strokeWidth="1dp" />
 
