--- a/code/MoodSync/app/src/main/res/layout/layout_song_selection_dialog.xml
+++ b/code/MoodSync/app/src/main/res/layout/layout_song_selection_dialog.xml
@@ -13,7 +13,7 @@ android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:orientation="vertical"
 android:padding="24dp"
-android:background="#F3F1C7">
+android:background="#F6F6E2">
 
 <TextView
     android:id="@+id/dialogTitle"
@@ -53,6 +53,6 @@ android:background="#F3F1C7">
     android:textColor="#FFFFFF"
     android:layout_marginTop="16dp"
     app:cornerRadius="8dp"
-    app:backgroundTint="#1F3133"/>
+    app:backgroundTint="#203434"/>
 </LinearLayout>
     </androidx.cardview.widget.CardView>
