--- a/code/MoodSync/app/src/main/res/layout/mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/mood_card_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#FFFFFF"
+        app:cardBackgroundColor="#F6F6E2"
         app:cardCornerRadius="20dp"
         app:cardElevation="6dp"
         app:cardUseCompatPadding="true"
