song is there on userprofile and editrprofile

--- a/code/MoodSync/app/src/main/res/layout/post_detail_dialog.xml
+++ b/code/MoodSync/app/src/main/res/layout/post_detail_dialog.xml
@@ -63,7 +63,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginStart="12dp"
                         android:layout_toEndOf="@id/profile_image_edit"
-                        android:layout_toStartOf="@id/details_button"
+
                         android:orientation="vertical">
 
                         <TextView
@@ -172,6 +172,7 @@
                         android:layout_marginStart="12dp">
 
                         <TextView
+                            android:paddingTop="4dp"
                             android:id="@+id/song_title"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
@@ -180,7 +181,7 @@
                             android:maxLines="1"
                             android:text="Song Title"
                             android:textColor="#555555"
-                            android:textSize="12sp" />
+                            android:textSize="16sp" />
                     </LinearLayout>
 
                     <ImageButton
