--- a/code/MoodSync/app/src/main/res/layout/user_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/user_profile_fragment.xml
@@ -89,12 +89,12 @@
                                 android:id = "@+id/nameofuser"/>
 
                             <TextView
+                                android:id="@+id/usernameofuser"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="\@Johndoe"
                                 android:textColor="#2E4545"
-                                android:textSize="16sp"
-                                android:id = "@+id/usernameofuser"/>
+                                android:textSize="16sp" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -103,19 +103,6 @@
                                 android:gravity="center_vertical"
                                 android:orientation="horizontal">
 
-                                <ImageView
-                                    android:layout_width="16dp"
-                                    android:layout_height="16dp"
-                                    android:src="@drawable/ic_location" />
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="4dp"
-                                    android:text="New York, USA"
-                                    android:textColor="#2E4545"
-                                    android:textSize="14sp"
-                                    android:id = "@+id/locationofuser"/>
                             </LinearLayout>
 
                             <com.google.android.material.button.MaterialButton
