--- a/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
@@ -196,10 +196,11 @@
                             android:id="@+id/profile_image_edit"
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:background="@drawable/circle_background"
+                            android:background="@drawable/circle_profile_background"
                             android:clipToOutline="true"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/ic_map_black_24dp" />
+                            android:src="@drawable/ic_person_black_24dp"
+                            app:tint="#E9E9D2"/>
 
                         <LinearLayout
                             android:layout_width="match_parent"
