--- a/code/MoodSync/app/src/main/res/layout/user_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/user_profile_fragment.xml
@@ -194,10 +194,11 @@
                             android:id="@+id/profile_image_edit"
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:src="@drawable/ic_map_black_24dp"
+                            android:src="@drawable/ic_person_black_24dp"
                             android:scaleType="centerCrop"
-                            android:background="@drawable/circle_background"
-                            android:clipToOutline="true"/>
+                            android:background="@drawable/circle_profile_background"
+                            android:clipToOutline="true"
+                            app:tint="#E9E9D2" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
