--- a/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
@@ -199,8 +199,7 @@
                             android:background="@drawable/circle_profile_background"
                             android:clipToOutline="true"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/ic_person_black_24dp"
-                            app:tint="#E9E9D2"/>
+                            android:src="@drawable/ic_person_black_24dp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
