--- a/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
@@ -26,14 +26,15 @@
             android:paddingHorizontal="16dp"
             android:paddingVertical="12dp">
 
-            <com.google.android.material.imageview.ShapeableImageView
+            <ImageView
                 android:id="@+id/profile_image_edit"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_person_black_24dp"
-                app:shapeAppearanceOverlay="@style/CircleImageView"
                 android:scaleType="centerCrop"
-                android:elevation="1dp"/>
+                android:background="@drawable/circle_profile_background"
+                android:clipToOutline="true"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
