--- a/code/MoodSync/app/src/main/res/layout/mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/mood_card_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#F6F6E2"
+        app:cardBackgroundColor="#FFF8E6"
         app:cardCornerRadius="20dp"
         app:cardElevation="6dp"
         app:cardUseCompatPadding="true"
@@ -57,6 +57,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/delete_button"
                 app:layout_constraintStart_toEndOf="@+id/moodEmojiTextView"
                 app:layout_constraintTop_toBottomOf="@+id/mood_text_view" />
+
             <ImageButton
                 android:id="@+id/delete_button"
                 android:layout_width="40dp"
