--- a/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_profile_fragment.xml
@@ -19,10 +19,21 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Profile"
+            android:text="             Profile"
             android:textColor="#F5F5DC"
             android:textSize="20sp"
             android:textStyle="bold" />
+        <Button
+            android:id="@+id/logout_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            android:textSize="12sp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="4dp"
+            app:cornerRadius="8dp"
+            android:textColor="#F5F5DC"
+            app:backgroundTint="#6B7B69" />
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
@@ -173,7 +184,7 @@
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="12dp"
                 app:cardElevation="4dp"
-                app:cardBackgroundColor="#EAEAD8">
+                app:cardBackgroundColor="#FFF8E6">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -252,7 +263,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="Photographer | Travel Enthusiast | Coffee Lover\nCapturing moments and sharing stories through my lens. Always on the lookout for the next adventure."
+                        android:text="Bio"
                         android:textColor="#203434"
                         android:textSize="14sp" />
 
@@ -314,8 +325,8 @@
                             android:id="@+id/pending_button_request"
                             android:layout_width="wrap_content"
                             android:layout_height="45dp"
-                            app:cardBackgroundColor="#eaeab4"
-                            app:cardCornerRadius="0dp"
+                            app:cardBackgroundColor="#FFF8E6"
+                            app:cardCornerRadius="10dp"
                             app:strokeWidth="0dp">
 
                             <LinearLayout
